[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Title Screen/Title Screen.png" type="Texture" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TitleScreen" type="Sprite" parent="."]
visible = false
position = Vector2( 240, 135 )
z_index = 1
texture = ExtResource( 2 )

[node name="Message" type="Label" parent="."]
margin_left = 120.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 120.0
rect_scale = Vector2( 3, 3 )
text = "Game Over"
align = 1
valign = 1
autowrap = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HP" type="Label" parent="."]
margin_left = 36.0
margin_top = 16.0
margin_right = 76.0
margin_bottom = 30.0
align = 1
valign = 1

[node name="Controls" type="Label" parent="."]
margin_left = 380.0
margin_top = 3.0
margin_right = 501.0
margin_bottom = 68.0
rect_scale = Vector2( 0.8, 0.8 )
text = "W, A, S, D to move
Space to attack
P to pause
Backspace to reset"

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
